--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,24 @@
+annotated-types==0.7.0
+anyio==4.8.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
+click==8.1.8
 decorator==5.1.1
+distro==1.9.0
+evernote3==1.25.14
+fastapi==0.115.8
+ffmpeg==1.4
 filelock==3.16.1
 fsspec==2024.12.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
 idna==3.10
-imageio==2.36.1
-imageio-ffmpeg==0.5.1
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
 Jinja2==3.1.5
+jiter==0.8.2
 llvmlite==0.43.0
 MarkupSafe==3.0.2
 more-itertools==10.5.0
@@ -15,18 +27,34 @@ mpmath==1.3.0
 networkx==3.4.2
 numba==0.60.0
 numpy==2.0.2
+oauth2==1.9.0.post1
+oauthlib==3.2.2
+openai==1.63.2
 openai-whisper==20240930
+pandas==2.2.3
 pillow==10.4.0
 proglog==0.1.10
+pydantic==2.10.6
+pydantic_core==2.27.2
 pydub==0.25.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.20
+pytz==2025.1
 regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==2.0.0
 semantic-version==2.10.0
 setuptools-rust==1.10.2
+six==1.17.0
+sniffio==1.3.1
+starlette==0.45.3
 sympy==1.13.1
 tiktoken==0.9.0
 torch==2.5.1
 tqdm==4.67.1
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
+uvicorn==0.34.0
